# Permit

./: .gitignore  README.md  cities_with_permits.csv  floorplan_extractor.py  permit_results.csv  pyproject.toml  top_6000_cities.csv  uscities.xlsx
.claude/: settings.local.json
.claude/agents/: permit-portal-finder.md
.claude/commands/: fill-permit-portals.md
codes/: burlingame_building.txt
ftworth/: .gitignore  20250701.csv  20250801.csv  20250901.csv  20251001.csv  20251101.csv  20251201.csv  README.md  convert_to_text.sh  download_comments.ts  extract_comments.ts  package-lock.json  package.json  tsconfig.json
ftworth/comments/: download_report_2025-12-12T05-13-10.txt  extracted.csv
ftworth/comments/txt/: PB25-09774_Comments.txt  PB25-09775_Comments.txt  PB25-09776_Comments.txt  PB25-09777_Comments.txt  PB25-09780_Comments.txt  PB25-09781_Comments.txt  PB25-09782_Comments.txt  PB25-09784_Comments.txt  PB25-09785_Comments.txt  PB25-09787_Comments.txt  PB25-09791_Comments.txt  PB25-09792_Comments.txt  PB25-09794_Comments.txt  PB25-09796_Comments.txt  PB25-09797_Comments.txt  PB25-09799_Comments.txt  PB25-09800_Comments.txt  PB25-09801_Comments.txt  PB25-09803_Comments.txt  PB25-09807_Comments.txt  PB25-09808_Comments.txt  PB25-09809_Comments.txt  PB25-09810_Comments.txt  PB25-09811_Comments.txt  PB25-09816_Comments.txt  PB25-09821_Comments.txt  PB25-09824_Comments.txt  PB25-09825_Comments.txt  PB25-09831_Comments.txt  PB25-09837_Comments.txt  PB25-09838_Comments.txt  PB25-09839_Comments.txt  (+2330 more)
optimized_extractor/: metadata.json  prompt.txt  state.json
